planning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-app
  namespace: planning-app
  labels:
    app: planning-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planning-app
  template:
    metadata:
      labels:
        app: planning-app
    spec:
      containers:
        - name: planning-app
          image: taakujobi/planning-app-deployment:v3
          ports:
            - containerPort: 80
          resources:
              limits:
                cpu: 500m
                memory: 500Mi
              requests:
                cpu: 200m
                memory: 300Mi
