planning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-app
  namespace: planning-app
spec:
  selector:
    app: planning-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
